improved minimalistic web version
added html5 selection by default and button to start sound (needed on iOS)

--- a/yaapp/templates/yabase/listen.html
+++ b/yaapp/templates/yabase/listen.html
@@ -5,6 +5,7 @@
     <script type="text/javascript">
         var g_radio_url = '{{ radio_url }}';
     </script>
+    <script type="text/javascript" src="/media/js/jquery-1.7.1.min.js"></script>
     <script type="text/javascript" src="/media/js/sm/soundmanager2-nodebug-jsmin.js"></script>
     <script type="text/javascript" src="/media/js/listen.js"></script>
     
@@ -17,6 +18,7 @@
 	    <p>Vestibulum id ligula porta felis euismod semper. Integer posuere erat a ante venenatis dapibus posuere velit aliquet. Duis mollis, est non commodo luctus, nisi erat porttitor ligula, eget lacinia odio sem nec elit.</p>
 		<p>
 		<a class="btn primary large" href='http://yasound.com'>Go to Yasound »</a>
+        <a class="btn primary large" id='play' href='#'>Play</a>
 		</p>
     </div>
 </div>
