--- a/yaapp/templates/yabase/listen.html
+++ b/yaapp/templates/yabase/listen.html
@@ -13,18 +13,39 @@
 {% block head_title %}{% trans "Listening to" %} {{ radio }}{% endblock %}
 {% block body %}
 <div class='container'>
+
+    <div class='row'>
+	    <div class='span10'>
+		    <div class="hero-unit">
+			    <h1>{{ radio }}</h1>
+		        {% for tag in radio.tags.all %}<span class="label notice">{{tag}}</span> {% endfor%}
+			    <p>{% trans "Created by" %} <strong>{{ radio.creator }}</strong> {% trans "on" %} {{ radio.created|date:"j F Y" }}</p>
+			    <p>{{ radio.description }}</p>
+				<p><a class="btn primary large" href='http://yasound.com'>Go to Yasound »</a></p>
+		    </div>
+	    </div>
+        <div class='span6'>
+            <table class="zebra-striped">
+            <thead>
+            </thead>
+            <tbody>
+            <tr><td>{% trans "Creator" %}</td><td>{{ radio.creator }}</td></tr>
+            <tr><td>{% trans "Date" %}</td><td>{{ radio.created|date:"j F Y" }}</td></tr>
+            <tr><td>{% trans "Genre" %}</td><td>{{ radio.genre }}</td></tr>
+            <tr><td>{% trans "Theme" %}</td><td>{{ radio.theme }}</td></tr>
+            <tr><td>{% trans "Audience peak" %}</td><td>{{ radio.audience_peak }}</td></tr>
+            <tr><td>{% trans "Overall listening time" %}</td><td>{{ radio.overall_listening_time }}</td></tr>
+            <tr><td>{% trans "Listeners" %}</td><td>{{ listeners }}</td></tr>
+            <tr><td>{% trans "Fans" %}</td><td>{{ fans }}</td></tr>
+            </tbody>
+            </table>
+        </div>
+    </div>
     <div class="well">
         <a class="btn large" id='play' href='#'>Play</a>
         <a class="btn large" id='inc' href='#'>Increase volume</a>
         <a class="btn large" id='dec' href='#'>Decrease volume</a>
         <a class="btn large" id='mute' href='#'>Mute</a>
     </div>
-
-    <div class="hero-unit">
-	    <h1>{{ radio }}</h1>
-	    <p>Vestibulum id ligula porta felis euismod semper. Integer posuere erat a ante venenatis dapibus posuere velit aliquet. Duis mollis, est non commodo luctus, nisi erat porttitor ligula, eget lacinia odio sem nec elit.</p>
-		<p><a class="btn primary large" href='http://yasound.com'>Go to Yasound »</a></p>
-    </div>
-    
 </div>
 {% endblock %}
