Added elapsed time information on find fuzzy form

--- a/yaapp/templates/yaref/find_fuzzy.html
+++ b/yaapp/templates/yaref/find_fuzzy.html
@@ -34,6 +34,9 @@
         <div class='span16'>
         <pre>{{ song }}</pre>
         </div>
+        <div class='span16'>
+        <pre>Search took {{ elapsed }} seconds</pre>
+        </div>
     </div>
 
 </div>
