--- a/yaapp/templates/base.html
+++ b/yaapp/templates/base.html
@@ -6,7 +6,7 @@
     <link rel="icon" type="image/x-icon" href="/media/images/favicon.ico" />
     <meta name="description" content="" />
     <meta name="keywords" content="" /> 
-    <link rel="stylesheet" href="/media/css/bootstrap.min.css">
+    <link rel="stylesheet" href="/media/bootstrap/css/bootstrap.min.css">
     <link rel="stylesheet" href="/media/css/style.css">
 
     {% block extra_head %}{% endblock %}
