--- a/yaapp/templates/account/login.html
+++ b/yaapp/templates/account/login.html
@@ -1,3 +1,12 @@
+{% extends "base.html" %}
+{% load i18n %}
+
+{% block body %}
+
+<div class='container'>
+
+    <div class='row'>
+
 <div>
   <h3>Login using <a href="http://oauth.net/" title="OAuth">OAuth</a> from:</h3>
   <ul>
@@ -15,3 +24,7 @@
   {% endfor %}
   </ul>
 </div>
+
+</div>
+</div>
+{% endblock %}
