--- a/yaapp/templates/account/login_error.html
+++ b/yaapp/templates/account/login_error.html
@@ -1,1 +1,28 @@
-<span>login social ERROR</span>
+{% extends "base.html" %}
+{% load i18n %}
+
+{% block body %}
+
+<div class='container'>
+
+    <div class='row'>
+<div>
+  <p>Sorry but some error made you impossible to login.</p>
+
+  {% if messages %}
+    {% for msg in messages %}
+        <p class="error">{{ msg.message }} ({{ msg.extra_tags }})</p>
+    {% endfor %}
+  {% endif %}
+  {% if error_msg %}
+    <p>Details:</p>
+    <p class="error">{{ error_msg }}</p>
+  {% endif %}
+
+  <p>Please try again <a href="/">Home</a></p>
+</div>
+
+
+</div></div>
+
+{% endblock %}
