Added index page

--- a/yaapp/templates/web/base.html
+++ b/yaapp/templates/web/base.html
@@ -5,7 +5,7 @@
 <div class='container-fluid'>
     <div class='row-fluid'>
         <div class='well'>
-       <img src='/media/images/logo.png' alt='Yasound logo'/>
+       <a href='/'><img src='/media/images/logo.png' alt='Yasound logo'/></a>
        </div>
     </div>
     <div class='row-fluid'>
