--- a/yaapp/templates/account/login.html
+++ b/yaapp/templates/account/login.html
@@ -1,30 +1,19 @@
-{% extends "base.html" %}
+{% extends "web/base.html" %}
 {% load i18n %}
 
-{% block body %}
+{% block head_title %}{% trans "Login" %}{% endblock %}
 
-<div class='container'>
+{% block menu %}
+    {% include "web/menu.html" with selected="login" %}
+{% endblock %}
 
-    <div class='row'>
 
-<div>
-  <h3>Login using <a href="http://oauth.net/" title="OAuth">OAuth</a> from:</h3>
-  <ul>
+{% block content %}
+  <h2>{% trans "Login using:" %}</h2>
   {% for name in social_auth.backends.oauth %}
-    <li><a rel="nofollow" href="{% url socialauth_begin name %}">{{ name|title }}</a></li>
+    <a rel="nofollow" href="{% url socialauth_begin name %}"><img class='login-service' src='/media/images/logo-{{ name }}.png' alt='{{ name|title }}'/></a>
   {% endfor %}
-  </ul>
-</div>
-
-<div>
-  <h3>Login using <a href="http://tools.ietf.org/html/draft-ietf-oauth-v2-10" title="OAuth2">OAuth2</a> from:</h3>
-  <ul>
   {% for name in social_auth.backends.oauth2 %}
-    <li><a rel="nofollow" href="{% url socialauth_begin name %}">{{ name|title }}</a></li>
+    <a rel="nofollow" href="{% url socialauth_begin name %}"><img class='login-service' src='/media/images/logo-{{ name }}.png' alt='{{ name|title }}'/></a>
   {% endfor %}
-  </ul>
-</div>
-
-</div>
-</div>
 {% endblock %}
