--- a/yaapp/templates/web/selections.html
+++ b/yaapp/templates/web/selections.html
@@ -22,11 +22,8 @@
 {% endblock %}
 
 {% block content %}
-	<form class="well" action='' method='get'>
-	   <div class='controls'>
+	<form class="well form-horizontal" action='' method='get'>
         {{ form }}
-        </div>
-        
         <button class="btn" type="submit">Filter</button>
     </form>
 
