--- a/yaapp/templates/web/my_radio.html
+++ b/yaapp/templates/web/my_radio.html
@@ -4,7 +4,7 @@
 
 
 {% block menu %}
-    {% include "web/menu.html" with selected="my-radio" %}
+    {% include "web/menu.html" with selected=radio.uuid %}
 {% endblock %}
 
 {% block content %}
