--- a/yaapp/media/css/style.css
+++ b/yaapp/media/css/style.css
@@ -39,6 +39,7 @@ footer #menu a:hover {
     background-image:url(/media/images/icon-radio.png);
     background-repeat: no-repeat;
     background-position: 10px 10px; 
+    height:120px;
 }
 
 #radio p {font-size:14px;font-weight:200;line-height:27px;}
