* Fixed footer links * Smaller text for song metadata

--- a/yaapp/templates/yabase/listen.html
+++ b/yaapp/templates/yabase/listen.html
@@ -85,7 +85,7 @@
     
     <footer>
       <div id="menu">
-      <a href="a_propos_de_nous.php">À propos de nous</a> | <a href="jobs.php">Jobs</a> | <a href="presse.php">Presse</a> | <a href="contact.php">Contact</a>
+      <a href="http://yasound.com/a_propos_de_nous.php">À propos de nous</a> | <a href="http://yasound.com/jobs.php">Jobs</a> | <a href="http://yasound.com/presse.php">Presse</a> | <a href="http://yasound.com/contact.php">Contact</a>
       </div>
     </footer>
 </div>
