--- a/yaapp/templates/account/login.html
+++ b/yaapp/templates/account/login.html
@@ -1,19 +1,59 @@
-{% extends "web/base.html" %}
+{% extends "base.html" %}
 {% load i18n %}
 
 {% block head_title %}{% trans "Login" %}{% endblock %}
 
-{% block menu %}
-    {% include "web/menu.html" with selected="login" %}
+
+{% block body %}
+<div class='container'>
+    <div class='row'>
+        <div class='span3'>
+        <a href='/'><img src='/media/images/logo.png' alt='Yasound logo'/></a>
+        </div>
+        <div class='span9'>
+        <img src='/media/images/banner.png' alt='Banner'/>
+        </div>
+    </div>
+    
+    
+    <div class='row'>
+        <div class='span4'>
+           <div id="radio">
+               <div id='radio-picture'>
+                   <img src="/media/images/default_image.png" width="128px" height="128px" alt='{% trans "Radio logo" %}'/>
+               </div>
+               <div id='radio-title'>
+                </div>
+           </div>
+        </div>   
+
+        <div class='span8'>
+           <div id='player'>
+               <h1>{% trans "Login required" %}</h1>
+               <p>{% trans "You must be logged to access this ressource." %}</p>
+               
+               <p>
+               <a rel="nofollow" href="{% url socialauth_begin 'facebook' %}">{% trans "Please click here to login" %}</a>
+               </p>
+            </div>
+        </div>
+    </div>    
+    
+    <div class='row'>
+        <div id='appstore'>
+        <a href='#'>
+        <img src='/media/images/available-appstore-fr.png' alt='{% trans "available on appstore" %}'/>
+        </a>
+        </div>
+    </div>    
+    
+    <footer>
+      <div id="menu">
+      <a href="{% url logout %}">{% trans "Logout" %}</a> | <a href="http://yasound.com/a_propos_de_nous.php">À propos de nous</a> | <a href="http://yasound.com/jobs.php">Jobs</a> | <a href="http://yasound.com/presse.php">Presse</a> | <a href="http://yasound.com/contact.php">Contact</a>
+      </div>
+    </footer>
+</div>
 {% endblock %}
 
-
 {% block content %}
-  <h2>{% trans "Login using:" %}</h2>
-  {% for name in social_auth.backends.oauth %}
-    <a rel="nofollow" href="{% url socialauth_begin name %}"><img class='login-service' src='/media/images/logo-{{ name }}.png' alt='{{ name|title }}'/></a>
-  {% endfor %}
-  {% for name in social_auth.backends.oauth2 %}
-    <a rel="nofollow" href="{% url socialauth_begin name %}"><img class='login-service' src='/media/images/logo-{{ name }}.png' alt='{{ name|title }}'/></a>
-  {% endfor %}
 {% endblock %}
