--- a/yaapp/templates/yabase/listen.html
+++ b/yaapp/templates/yabase/listen.html
@@ -38,7 +38,7 @@
 			       <img src="{{ im.url }}" width="128" height="128" alt='{% trans "Radio logo" %}'/>
 			       {% endthumbnail %}
 			       {% else %}
-                   <imgsrc="/media/images/default_image.png" width="128px" height="128px" alt='{% trans "Radio logo" %}'/>
+                   <img src="/media/images/default_image.png" width="128px" height="128px" alt='{% trans "Radio logo" %}'/>
 			       {% endif %}
 		       </div>
 		       <div id='radio-title'>
@@ -85,7 +85,7 @@
     
     <footer>
       <div id="menu">
-      <a href="http://yasound.com/a_propos_de_nous.php">À propos de nous</a> | <a href="http://yasound.com/jobs.php">Jobs</a> | <a href="http://yasound.com/presse.php">Presse</a> | <a href="http://yasound.com/contact.php">Contact</a>
+      <a href="{% url logout %}">{% trans "Logout" %}</a> | <a href="http://yasound.com/a_propos_de_nous.php">À propos de nous</a> | <a href="http://yasound.com/jobs.php">Jobs</a> | <a href="http://yasound.com/presse.php">Presse</a> | <a href="http://yasound.com/contact.php">Contact</a>
       </div>
     </footer>
 </div>
