Added slider for volume

--- a/yaapp/templates/yabase/listen.html
+++ b/yaapp/templates/yabase/listen.html
@@ -68,6 +68,9 @@
                     {% trans "Buy on iTunes" %}
                     </a>
                     </div>
+                      <div class="progress" id='volume-control'>
+                        <div class="bar" id='volume-position' style="width: 0%;"></div>
+                      </div>
 
                    </div>
                </div> 
