--- a/yaapp/templates/account/login.html
+++ b/yaapp/templates/account/login.html
@@ -19,8 +19,8 @@
     <div class='row'>
         <div class='span4'>
            <div id="radio">
-               <div id='radio-picture'>
-                   <img src="/media/images/default_image.png" width="128px" height="128px" alt='{% trans "Radio logo" %}'/>
+               <div id='radio-picture' class='thumbnail'>
+                   <img src="/media/images/default_image.png" width="160px" height="160px" alt='{% trans "Radio logo" %}'/>
                </div>
                <div id='radio-title'>
                 </div>
