--- a/yaapp/templates/web/index.html
+++ b/yaapp/templates/web/index.html
@@ -1,27 +1,55 @@
-{% extends "web/base.html" %} 
-{% load i18n %} 
+{% extends "base.html" %}
+{% load i18n %}
 
-{% block head_title %}{% trans "Welcome" %}{% endblock %}
+{% block head_title %}{% trans "Login" %}{% endblock %}
 
-{% block menu %}
-    {% include "web/menu.html" with selected="" %}
+
+{% block body %}
+<div class='container'>
+    <div class='row'>
+        <div class='span3'>
+        <a href='/'><img src='/media/images/logo.png' alt='Yasound logo'/></a>
+        </div>
+        <div class='span9'>
+        <img src='/media/images/banner.png' alt='Banner'/>
+        </div>
+    </div>
+    
+    
+    <div class='row'>
+        <div class='span4'>
+           <div id="radio">
+               <div id='radio-picture' class='thumbnail'>
+                   <img src="/media/images/default_image.png" width="160px" height="160px" alt='{% trans "Radio logo" %}'/>
+               </div>
+               <div id='radio-title'>
+                </div>
+           </div>
+        </div>   
+
+        <div class='span8'>
+           <div id='player'>
+               <h1>{% trans "Coming soon" %}</h1>
+               <p>{% trans "Yasound is coming soon." %}</p>
+            </div>
+        </div>
+    </div>    
+    
+    <div class='row'>
+        <div id='appstore'>
+        <a href='#'>
+        <img src='/media/images/available-appstore-fr.png' alt='{% trans "available on appstore" %}'/>
+        </a>
+        </div>
+    </div>    
+    
+    <footer>
+      <div id="menu">
+      <a href="{% url logout %}">{% trans "Logout" %}</a> | <a href="http://yasound.com/a_propos_de_nous.php">À propos de nous</a> | <a href="http://yasound.com/jobs.php">Jobs</a> | <a href="http://yasound.com/presse.php">Presse</a> | <a href="http://yasound.com/contact.php">Contact</a>
+      </div>
+    </footer>
+</div>
 {% endblock %}
-
 
 {% block content %}
-    <h2>{% trans "Welcome" %}</h2>
-    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. In molestie lorem augue. Etiam lectus sapien, vehicula vitae eleifend in, adipiscing et odio. Integer ut eros id velit laoreet pulvinar. Duis libero dolor, volutpat a pulvinar nec, viverra in dui. Quisque ullamcorper scelerisque venenatis. Ut mollis libero eget neque consectetur vestibulum. Vestibulum non nunc libero, non facilisis ipsum.
-
-Nunc orci orci, accumsan eget convallis fringilla, dignissim eget orci. Pellentesque nulla odio, vulputate in luctus eget, fermentum eget neque. Nulla tortor odio, lacinia semper mattis sed, aliquet et lorem. Cras iaculis metus id purus volutpat a sagittis mi mattis. Donec suscipit tempus ante, nec commodo arcu pellentesque at. Nunc in dolor enim, sit amet eleifend nulla. Donec rutrum, eros et facilisis condimentum, libero odio aliquam ipsum, vel venenatis purus quam non odio. Donec mollis consectetur nibh, vitae dignissim lectus iaculis eget. Integer iaculis tempor adipiscing. Vivamus tortor lectus, interdum eu lobortis id, vehicula nec nunc. Nam nisi libero, sagittis at cursus vitae, tempus sit amet neque.
-
-Cras nibh tellus, pharetra elementum vehicula a, vestibulum quis est. In hac habitasse platea dictumst. Praesent sed dui at justo vestibulum rhoncus vitae tempus lorem. Curabitur et dolor felis. Vestibulum dignissim tellus in turpis faucibus nec mollis magna elementum. Sed commodo, arcu sed commodo vestibulum, mi arcu ultrices sem, id vestibulum dui enim a erat. Mauris non metus nibh, nec fermentum nibh. Sed ultrices tempor lobortis. Donec metus tortor, tincidunt eu tempus nec, lacinia id mauris. Aenean convallis ultricies lectus, ultricies commodo dolor posuere in. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisque nisl urna, malesuada in eleifend sed, placerat non metus.
-
-Proin lorem mi, aliquam non mattis id, scelerisque sed libero. Cras porttitor varius mi, at ornare tortor faucibus vitae. Donec lacinia feugiat ipsum a fermentum. Mauris semper elementum fermentum. Aliquam ut urna ipsum, quis pharetra enim. Praesent tempor dictum magna in consectetur. In sollicitudin sagittis mauris at lobortis. Etiam aliquet odio egestas turpis aliquet ornare. Etiam nunc enim, iaculis quis iaculis a, pharetra fringilla dolor. Aenean sed nibh vitae justo porta condimentum. Sed vitae arcu enim, non tincidunt tellus. Proin tempor nisi id libero sollicitudin blandit. Duis quis scelerisque diam. Nunc posuere, augue ut molestie feugiat, velit urna suscipit dolor, ultricies faucibus nibh orci eget purus. Nam urna elit, imperdiet vel dapibus vel, fringilla et eros.
-
-Aenean metus ipsum, vehicula vitae sodales eget, volutpat eu mauris. Nam lobortis porta leo tincidunt molestie. Mauris dignissim accumsan arcu eu cursus. In elit sapien, auctor et gravida sed, cursus eu dui. Integer vitae convallis leo. Donec vehicula lobortis mi nec tempus. Quisque volutpat faucibus dui, non imperdiet erat fringilla eget. Quisque ut turpis et tortor feugiat semper non eget justo. Quisque consectetur pellentesque enim, vel tincidunt ligula sollicitudin sed. Nam sit amet erat mi, sed aliquam leo. Nulla auctor lacinia lacus nec tincidunt. Nullam feugiat ornare risus non ultrices. Maecenas quis eleifend tortor. 
-</p>
-{% if not request.user.is_authenticated %}
-<p><a href="{% url login %}" class="btn btn-primary btn-large">{% trans "Login »" %}</a></p>
-{% endif %}
 {% endblock %}
-
