Added click+drag for volume control

--- a/yaapp/templates/yabase/listen.html
+++ b/yaapp/templates/yabase/listen.html
@@ -68,8 +68,8 @@
                     {% trans "Buy on iTunes" %}
                     </a>
                     </div>
-                      <div class="progress" id='volume-control'>
-                        <div class="bar" id='volume-position' style="width: 0%;"></div>
+                      <div class="progress" id='volume-control' onmousedown="return false">
+                        <div class="bar" id='volume-position' style="width: 0%;" onmousedown="return false"></div>
                       </div>
 
                    </div>
