--- a/yaapp/templates/yabase/listen.html
+++ b/yaapp/templates/yabase/listen.html
@@ -68,7 +68,7 @@
                     {% trans "Buy on iTunes" %}
                     </a>
                     </div>
-                      <div class="progress" id='volume-control' onmousedown="return false">
+                      <div class="progress no-ease" id='volume-control' onmousedown="return false">
                         <div class="bar" id='volume-position' style="width: 0%;" onmousedown="return false"></div>
                       </div>
 
