--- a/yaapp/media/css/style.css
+++ b/yaapp/media/css/style.css
@@ -34,12 +34,13 @@ footer #menu a:hover {
 	margin-top: 24px;
 	background-color: #F5F5F5;
 	border-radius: 6px 6px 6px 6px;
-	margin-bottom: 30px;
-	padding: 60px;
+	padding: 40px;
+	padding-top:60px;
+	padding-bottom:60px;
 	background-image: url(/media/images/icon-radio.png);
 	background-repeat: no-repeat;
 	background-position: 10px 10px;
-	height: 160px;
+	margin-bottom:24px;
 }
 
 #radio p {
@@ -49,7 +50,7 @@ footer #menu a:hover {
 }
 
 #radio-picture {
-	width: 128px;
+	width: 212px;
 	margin: 0px auto;
 }
 
@@ -62,17 +63,20 @@ footer #menu a:hover {
 	text-align: center;
 }
 
+
 #player {
 	margin-top: 24px; background-color : #F5F5F5;
 	border-radius: 6px 6px 6px 6px;
-	margin-bottom: 30px;
 	padding: 60px;
 	background-image: url(/media/images/icon-on-air.png);
 	background-repeat: no-repeat;
 	background-position: 10px 10px;
-	height: 160px;
 	background-color: #F5F5F5;
+    margin-bottom:24px;
 }
+
+
+
 
 #player p {
 	font-size: 18px;
@@ -122,3 +126,4 @@ footer #menu a:hover {
 	-o-transition: width 0s ease;
 	transition: width 0s ease;
 }
+
