--- a/yaapp/templates/yabase/listen.html
+++ b/yaapp/templates/yabase/listen.html
@@ -34,11 +34,11 @@
 		   <div id="radio">
 		       <div id='radio-picture' class='thumbnail'>
 		           {% if radio.picture %}
-			       {% thumbnail radio.picture "160x160" format='PNG' as im %}
-			       <img src="{{ im.url }}" width="160" height="160" alt='{% trans "Radio logo" %}'/>
+			       {% thumbnail radio.picture "256x256" format='PNG' as im %}
+			       <img src="{{ im.url }}" width="256px" height="256px" alt='{% trans "Radio logo" %}'/>
 			       {% endthumbnail %}
 			       {% else %}
-                   <img src="/media/images/default_image.png" width="160px" height="160px" alt='{% trans "Radio logo" %}'/>
+                   <img src="/media/images/default_image.png" width="256px" height="256px" alt='{% trans "Radio logo" %}'/>
 			       {% endif %}
 		       </div>
 		       <div id='radio-title'>
