--- a/yaapp/templates/yabase/listen.html
+++ b/yaapp/templates/yabase/listen.html
@@ -63,7 +63,7 @@
                    </div>
 
                    <div class="btn-group">
-                   <a class="btn" href="{% url buy_link radio.id %}" target='_blank'>
+                   <a class="btn" id='btn-buy' href="{% url buy_link radio.id %}" target='_blank'>
                     <i class="icon-shopping-cart"></i>
                     {% trans "Buy on iTunes" %}
                     </a>
