--- a/yaapp/templates/base.html
+++ b/yaapp/templates/base.html
@@ -4,8 +4,21 @@
 <head>
     <title>{% block head_title %}Home{% endblock %} — Yasound</title>
     <link rel="icon" type="image/x-icon" href="/media/images/favicon.ico" />
-    <meta name="description" content="" />
-    <meta name="keywords" content="" /> 
+	<meta name="description" content="Avec Yasound, créez votre radio en un instant, écoutez la musique avec vos amis, et communiquez avec eux en temps réel sur le net, et bientôt sur votre mobile." />
+	<meta name="Author" content="Yasound SAS" />
+	<meta name="copyright" content="Yasound SAS" />
+	<meta http-equiv="Cache-control" content="public" />
+	<meta name="language" content="french" />
+	<meta property="og:title" content="YASOUND : N'écoutez plus seul votre musique."/>
+	<meta property="og:type" content="Compagnie"/>
+	<meta property="og:url" content="http://yasound.com/fr"/>
+	<meta property="og:image" content="http://yasound.com/fr/og.jpg"/>
+	<meta property="og:site_name" content="YASOUND : Ma radio, c'est moi."/>
+	
+	<meta property="fb:admins" content="USER_ID"/>
+	<meta property="og:description"
+	      content="Avec Yasound, créez votre radio en un instant, écoutez la musique avec vos amis, et communiquez avec eux en temps réel sur le net, et bientôt sur votre mobile."/>
+
     <link rel="stylesheet" href="/media/bootstrap/css/bootstrap.min.css">
     <link rel="stylesheet" href="/media/css/style.css">
 
