Fixed footer links

--- a/yaapp/templates/base.html
+++ b/yaapp/templates/base.html
@@ -47,7 +47,7 @@
     
     <footer>
       <div id="menu">
-      <a href="{% url logout %}">{% trans "Logout" %}</a> | <a href="http://yasound.com/a_propos_de_nous.php">À propos de nous</a> | <a href="http://yasound.com/jobs.php">Jobs</a> | <a href="http://yasound.com/presse.php">Presse</a> | <a href="http://yasound.com/contact.php">Contact</a>
+      <a href="{% url logout %}">{% trans "Logout" %}</a> | <a href="http://yasound.com/fr/a_propos_de_nous.php">À propos de nous</a> | <a href="http://yasound.com/fr/jobs.php">Jobs</a> | <a href="http://yasound.com/fr/presse.php">Presse</a> | <a href="http://yasound.com/fr/contact.php">Contact</a>
       </div>
     </footer>
 </div>
