--- a/yaapp/templates/base.html
+++ b/yaapp/templates/base.html
@@ -33,7 +33,9 @@
         <a href='/'><img src='/media/images/logo.png' alt='Yasound logo'/></a>
         </div>
         <div class='span9'>
+        <a href='http://itunes.com/app/yasound' rel="nofollow">
         <img src='/media/images/banner.png' alt='Banner'/>
+        </a>
         </div>
     </div>
     {% block content %}{% endblock %}
