--- a/yaapp/templates/base.html
+++ b/yaapp/templates/base.html
@@ -41,7 +41,7 @@
     {% block content %}{% endblock %}
     <div class='row'>
         <div id='appstore'>
-        <a href='http://itunes.com/app/yasound' rel="nofollow">
+        <a href="http://itunes.apple.com/fr/app/yasound/id492680161?mt=8&uo=4" target="itunes_store">
         <img src='/media/images/available-appstore-fr.png' alt='{% trans "available on appstore" %}'/>
         </a>
         </div>
