fixed link to appstore on banner

--- a/yaapp/templates/base.html
+++ b/yaapp/templates/base.html
@@ -33,7 +33,7 @@
         <a href='/'><img src='/media/images/logo.png' alt='Yasound logo'/></a>
         </div>
         <div class='span9'>
-        <a href='http://itunes.com/app/yasound' rel="nofollow">
+        <a href="http://itunes.apple.com/fr/app/yasound/id492680161?mt=8&uo=4" target="itunes_store">
         <img src='/media/images/banner.png' alt='Banner'/>
         </a>
         </div>
