--- a/yaapp/templates/yaweb/base.html
+++ b/yaapp/templates/yaweb/base.html
@@ -80,6 +80,7 @@ window.addEvent('domready', function() {
 
 {% block content %}{% endblock %}
 
+<div id="deco">&nbsp</div>
 <div id="footer">
   <div id="content">
     <div id="menu">
