--- a/yaapp/templates/yaweb/index.html
+++ b/yaapp/templates/yaweb/index.html
@@ -17,7 +17,7 @@
 <meta property="fb:admins" content="USER_ID"/>
 <meta property="og:description"
 content="Avec Yasound, créez votre radio en un instant, écoutez la musique avec vos amis, et communiquez avec eux en temps réel sur le net, et bientôt sur votre mobile."/>
-<link rel="icon" type="image/jpeg" href="icon.jpg" />
+<link rel="icon" type="image/png" href="/media/yaweb/images/favicon.png" />
 <link href="/media/yaweb/css/intro.css" rel="stylesheet" type="text/css" />
 <script type="text/javascript" src="/media/yaweb/js/mootools-core-1.4.5-full-nocompat.js"></script>
 <script type="text/javascript" src="/media/yaweb/js/mootools-more-1.4.0.1.js"></script>
